Liberações de rotas para o front end e histórico medico reajustado
