# app.py
@@ -5,21 +5,16 @@ from flasgger import Swagger
 from dotenv import load_dotenv
 import os, yaml
 
-# Carregar variáveis de ambiente
 load_dotenv()
 
-# Inicializar Flask
 app = Flask(__name__)
 CORS(app)
 
-# Configurações
 app.config['SQLALCHEMY_DATABASE_URI'] = os.getenv('DATABASE_URL')
 app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False
 
-# Inicializar banco de dados
 db = SQLAlchemy(app)
 
-# Configurar Swagger para documentação da API, carregando do swagger.yml
 swagger_path = os.path.join(os.path.dirname(__file__), 'swagger.yml')
 with open(swagger_path, 'r', encoding='utf-8') as f:
     swagger_template = yaml.safe_load(f)
@@ -30,8 +25,8 @@ swagger_config = {
         {
             "endpoint": 'apispec_1',
             "route": '/apispec_1.json',
-            "rule_filter": lambda rule: True,  # inclui todas as rotas
-            "model_filter": lambda tag: True,  # inclui todos os modelos
+            "rule_filter": lambda rule: True,
+            "model_filter": lambda tag: True,
         }
     ],
     "static_url_path": "/flasgger_static",
@@ -41,13 +36,11 @@ swagger_config = {
 
 swagger = Swagger(app, template=swagger_template, config=swagger_config)
 
-# Importar modelos e rotas
 from models.animal import Animal
 from models.consulta import Consulta
 from routes.animal_routes import animal_bp
 from routes.consulta_routes import consulta_bp
 
-# Registrar blueprints
 app.register_blueprint(animal_bp, url_prefix='/api/v1/animais')
 app.register_blueprint(consulta_bp, url_prefix='/api/v1/consultas')
 
@@ -59,5 +52,5 @@ if __name__ == '__main__':
     with app.app_context():
         db.create_all()
     
-    port = int(os.getenv('PORT', 8001))
+    port = int(os.getenv('PORT'))
     app.run(host='0.0.0.0', port=port, debug=True)
